# cascii-studio

./: .gitignore  Cargo.toml  README.md  REFACTORING.md  TODO.MD  Trunk.toml  VERSIONING.md  build-frontend.js  build-frontend.sh  build.rs  index.html  investigation_performance.md  run.sh  ssmver.toml  styles.css  tabs_investigation.md
.github/workflows/: build.yaml  release.yaml
public/: headers.json
scripts/: README.md  VERSIONING.md  bump_version.py  reset_version_tracking.sh
src/: app.rs  main.rs  tauri_shim.js
src-tauri/: .gitignore  Cargo.toml  FRAME_BUNDLE_NOTES.md  build-frontend.js  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  ffmpeg.rs  frame_bundle.rs  lib.rs  main.rs  settings.rs  util.rs
src-tauri/src/commands/: content.rs  context_menu.rs  conversion.rs  cuts.rs  export.rs  media.rs  mod.rs  preview.rs  project.rs  settings_cmd.rs  source.rs  timeline.rs
src-tauri/src/database/: audio.rs  conversions.rs  cuts.rs  migrations.rs  mod.rs  models.rs  previews.rs  project_content.rs  projects.rs  schema.rs  sources.rs  timeline.rs
src/assets/cascii/loop_project/: details copy.md  frame_0017.txt  frame_0018.txt  frame_0019.txt  frame_0020.txt  frame_0021.txt  frame_0022.txt  frame_0023.txt  frame_0024.txt  frame_0025.txt  frame_0026.txt  frame_0027.txt  frame_0028.txt  frame_0029.txt  frame_0030.txt  frame_0031.txt  frame_0032.txt  frame_0033.txt  frame_0034.txt  frame_0035.txt  frame_0036.txt  frame_0037.txt  frame_0038.txt  frame_0039.txt  frame_0040.txt  frame_0041.txt  frame_0042.txt  frame_0043.txt  frame_0044.txt  frame_0045.txt  frame_0046.txt  frame_0047.txt  frame_0048.txt  frame_0049.txt  frame_0050.txt  frame_0051.txt  frame_0052.txt  frame_0053.txt  frame_0054.txt  frame_0055.txt  (+245 more)
src/components/: ascii_animation.rs  ascii_frames_viewer.rs  frame_media.rs  header.rs  mod.rs  sidebar.rs  tab_bar.rs  video_player.rs
src/components/explorer/: context_menu.rs  drag_state.rs  explorer_tree.rs  explorer_types.rs  mod.rs  project_content.rs  resources_tree.rs  tree_node.rs  tree_section.rs
src/components/settings/: available_cuts.rs  available_frames.rs  computing.rs  controls.rs  convert_to_ascii.rs  export_section.rs  mod.rs  source_files.rs  tools_section.rs
src/pages/: home.rs  library.rs  mod.rs  montage.rs  new.rs  open.rs  project.rs  project_cache.rs  settings.rs  sponsor.rs
src/styles/: ascii_frames_viewer.css  base.css  explorer.css  montage.css  new.css  open.css  project.css  settings.css  sidebar.css  sponsor.css  tabs.css  video_player.css
