[package]
name = "cascii_studio-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0"
gloo-net = "0.4"
gloo-timers = "0.3"
once_cell = "1.19"
futures = "0.3"

# Lucide icons for Yew sidebar
# Only the specific icons we use to keep bundle small
yew_icons = { version = "0.8.0", features = [
    "LucideHome",
    "LucidePlus",
    "LucideFolderOpen",
    "LucideSettings",
    "LucideLibrary",
    "LucideHeart",
    "LucideFolder",
] }

[build-dependencies]
walkdir = "2"

[workspace]
members = ["src-tauri"]
