[package]
name = "cascii_studio-ui"
version = "0.106.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlVideoElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Event",
    "InputEvent",
    "EventTarget",
    "Element",
    "DomRect",
    "DataTransfer",
    "DragEvent"
]}
gloo = "0.10.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
yew-router = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
chrono = { version = "0.4.23", features = ["serde"] }
console_error_panic_hook = "0.1.7"
once_cell = "1.19"
futures = "0.3"
yew_icons = { version = "0.8.0", features = [
    "LucideBrush",
    "LucideHome",
    "LucidePlus",
    "LucideFolderOpen",
    "LucideSettings",
    "LucideLibrary",
    "LucideHeart",
    "LucideFolder",
    "LucidePlay",
    "LucidePause",
    "LucideVolume2",
    "LucideVolumeX",
    "LucideVolume1",
    "LucideTrash2",
    "LucideXCircle",
    "LucidePencil",
    "LucideScissors",
    "LucideWand",
    "LucideRepeat",
    "LucideSkipForward",
    "LucideFilm",
    "LucideMinus"
] }

[build-dependencies]
walkdir = "2"

[workspace]
members = ["src-tauri"]
