[package]
name = "cascii_studio"
version = "0.115.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "cascii_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.1"
tauri-plugin-opener = "2.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
cascii = "0.16.1"
toml = "0.8"
cascii-core-view = { version = "0.1.3", features = ["serde", "toml"] }
rand = "0.8"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
